--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,95 +1,59 @@
-user www-data;
-worker_processes 4;
-pid /run/nginx.pid;
+
+#AUTOMATICALLY GENERATED - DO NO EDIT!
+
+user www-data www-data;
+pid /var/run/nginx.pid;
+worker_processes 1;
+worker_rlimit_nofile 100000;
 
 events {
-	worker_connections 768;
-	# multi_accept on;
+    worker_connections  4096;
+    include /etc/nginx.custom.events.d/*.conf;
 }
 
 http {
+    default_type application/octet-stream;
 
-	##
-	# Basic Settings
-	##
+    access_log off;
+    error_log  /var/log/nginx/error.log crit;
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	# server_tokens off;
+    sendfile on;
+    tcp_nopush on;
 
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
+    keepalive_timeout 20;
+    client_header_timeout 20;
+    client_body_timeout 20;
+    reset_timedout_connection on;
+    send_timeout 20;
 
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+    types_hash_max_size 2048;
 
-	##
-	# Logging Settings
-	##
+    gzip on;
+    gzip_disable "msie6";
+    gzip_proxied any;
+    gzip_min_length 256;
+    gzip_comp_level 4;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript text/x-js;
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
+    server_names_hash_bucket_size 128;
 
-	##
-	# Gzip Settings
-	##
+    include mime.conf;
+    charset UTF-8;
 
-	gzip on;
-	gzip_disable "msie6";
+    open_file_cache max=100000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
 
-	# gzip_vary on;
-	# gzip_proxied any;
-	# gzip_comp_level 6;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-	# gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    server_tokens off;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
-	##
-	# nginx-naxsi config
-	##
-	# Uncomment it if you installed nginx-naxsi
-	##
+    include proxy.conf;
+    include fcgi.conf;
 
-	#include /etc/nginx/naxsi_core.rules;
-
-	##
-	# nginx-passenger config
-	##
-	# Uncomment it if you installed nginx-passenger
-	##
-	
-	#passenger_root /usr;
-	#passenger_ruby /usr/bin/ruby;
-
-	##
-	# Virtual Host Configs
-	##
-
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+    include conf.d/*.conf;
+    include /etc/nginx.custom.d/*.conf;
 }
 
+include /etc/nginx.custom.global.d/*.conf;
 
-#mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-#}
