--- a/etc/nginx/conf.d/mashpyme.conf
+++ b/etc/nginx/conf.d/mashpyme.conf
@@ -7,7 +7,7 @@ server {
     listen *:80;
     
     
-    
+    server_name mashpy.me www.mashpy.me;
 
     access_log /var/log/nginx/mashpyme.access.log;
     error_log /var/log/nginx/mashpyme.error.log;
