--- a/etc/nginx/conf.d/mashpyme.conf
+++ b/etc/nginx/conf.d/mashpyme.conf
@@ -19,5 +19,16 @@ server {
 
     
     
+    location ~ [^/]\.php(/|$) {
+        
+        
+        
+        fastcgi_index index.php;
+        include fcgi.conf;
+        fastcgi_pass unix:/var/run/ajenti-v-php-fcgi-mashpyme-php-fcgi-0.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+    }
+
 }
 
