--- a/etc/nginx/conf.d/mashpyme.conf
+++ b/etc/nginx/conf.d/mashpyme.conf
@@ -15,7 +15,7 @@ server {
     root /srv/new-website;
     index index.html index.htm index.php;
 
-    
+    try_files $uri $uri/ /index.php;
 
     
     
