--- a/etc/nginx/conf.d/railsmashpyme.conf
+++ b/etc/nginx/conf.d/railsmashpyme.conf
@@ -7,7 +7,7 @@ server {
     listen *:80;
     
     
-    
+    server_name rails.mashpy.me;
 
     access_log /var/log/nginx/railsmashpyme.access.log;
     error_log /var/log/nginx/railsmashpyme.error.log;
