--- a/etc/supervisor/supervisord.conf
+++ b/etc/supervisor/supervisord.conf
@@ -15,3 +15,8 @@ serverurl=unix:///var/run/supervisor.sock ;use a unix:// URL  for a unix socket
 
 [include]
 files=/etc/supervisor/conf.d/*.conf
+
+[program:railsmashpyme-nodejs-0]
+command=node .
+user=www-data
+directory=/srv/new-website
