--- a/etc/exim4/exim4.conf
+++ b/etc/exim4/exim4.conf
@@ -7,7 +7,7 @@ SMTP_PORT = 25
 LOCAL_INTERFACES = <; 0.0.0.0.25 ; 0.0.0.0.465 ; [::0]:25 ; [::0]:465
 CONFDIR = /etc/exim4
 
-LOCAL_DOMAINS = ip-172-31-23-55.us-west-2.compute.internal : localhost
+LOCAL_DOMAINS = mashpy.me : ip-172-31-23-55.us-west-2.compute.internal : localhost
 ETC_MAILNAME = ip-172-31-23-55.us-west-2.compute.internal
 LOCAL_DELIVERY = mail_spool
 CHECK_RCPT_LOCAL_LOCALPARTS = ^[.] : ^.*[@%!/|`#&?]
