--- a/etc/nginx/conf.d/railsmashpyme.conf
+++ b/etc/nginx/conf.d/railsmashpyme.conf
@@ -31,5 +31,17 @@ server {
 
     }
 
+
+    location ~ [^/]\.php(/|$) {
+        
+        
+        
+        fastcgi_index index.php;
+        include fcgi.conf;
+        fastcgi_pass unix:/var/run/ajenti-v-php-fcgi-railsmashpyme-php-fcgi-1.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+    }
+
 }
 
