--- a/etc/php5/fpm/php-fpm.conf
+++ b/etc/php5/fpm/php-fpm.conf
@@ -38,3 +38,21 @@ php_admin_value[open_basedir] = none
 
 
 
+[railsmashpyme-php-fcgi-1]
+user = www-data
+group = www-data
+
+listen = /var/run/ajenti-v-php-fcgi-railsmashpyme-php-fcgi-1.sock
+listen.owner = www-data
+listen.group = www-data
+listen.mode = 0660
+
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 1
+pm.min_spare_servers = 1
+pm.max_spare_servers = 5
+
+php_admin_value[open_basedir] = none
+
+
